--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require-dev": {
     "phpunit/phpunit": "4.8.18",
-    "phpunit/dbunit": "^2.0"
+    "phpunit/dbunit": "^2.0",
+    "fzaninotto/faker": "^1.5"
   },
   "autoload": {
     "psr-4": {
