--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "4.8.18"
+    "phpunit/phpunit": "4.8.18",
+    "phpunit/phpunit-selenium": "^1.4"
   },
   "autoload": {
     "psr-4": {
